--- a/templates/index.html
+++ b/templates/index.html
@@ -46,8 +46,8 @@
                         <h4>Ars</h4>
                     </div>
                     <div class="panel-body" style="height:145px;">
-                        <p>Photography rating and sharing service.  I wrote the backend, API, and the web frontend.  Currently under development.  If link doesn't load the first time, please try again to load the cache in GAE.</p>
-                        <a href="http://frontend-test-dot-ars-alpha.appspot.com/" class="btn btn-default">Learn More</a>
+                        <p>Photography rating and sharing service.  I wrote the entire backend, API, and the web frontend.  Currently in open beta.</p>
+                        <a href="http://beta-ars.appspot.com/" class="btn btn-default">Learn More</a>
                     </div>
                 </div>
             </div>
