forced all images to be served securely by https:// and removed the unnecessary upload.py

--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
                     </div>
                     <div class="panel-body" style="height:145px;">
                         <p>Photography rating and sharing service.  I wrote the entire backend, API, and the web frontend.  Currently in open beta.</p>
-                        <a href="http://beta-ars.appspot.com/" class="btn btn-default">Learn More</a>
+                        <a href="https://beta-ars.appspot.com/" class="btn btn-default">Learn More</a>
                     </div>
                 </div>
             </div>
