--- a/templates/base.html
+++ b/templates/base.html
@@ -85,27 +85,30 @@
 	    </nav>
 
 
-		<div id="fh5co-main">
+		<div id="content">
 			{% with messages = get_flashed_messages() %}
-			{% if messages %}
-				{% for message in messages %}
-					<div class="fh5co-narrow-content">
-						<div class="alert alert-success">
-							<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-							{{ message }}
+				{% if messages %}
+					{% for message in messages %}
+						<div class="fh5co-narrow-content">
+							<div class="alert alert-success">
+								<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+								{{ message }}
+							</div>
 						</div>
-					</div>
-			{% endfor %}
-			{% endif %}
-		{% endwith %}
+					{% endfor %}
+				{% endif %}
+			{% endwith %}
 
-    {% block content %} {% endblock %}
+            <div class="col-lg-8 col-centered">
+    		    {% block content %} {% endblock %}
+            </div>
+		</div>
 
 	
     <!-- Footer -->
     <footer>
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-8 col-centered">
                 <p>Copyright &copy; Kevin McKenzie 2018</p>
             </div>
         </div>
