updated resume and certifications

--- a/templates/index.html
+++ b/templates/index.html
@@ -78,10 +78,12 @@
         <img class="img-responsive" src="/static/pictures/me.jpeg" alt="">
     </div>
     <div class="col-md-6">
-        <p>I am a technology consultant for Deloitte Consulting.  I received a Masters in Computer Science from Stanford University in 2016.  I have a passion for photography and all things outdoors.  </p>
-        <p><a href="/static/documents/kmckenzie_resume.pdf">Resume</a></p>
+        <p>I am a Google Cloud Customer Engineer at Google.  I received a
+            Masters in Computer Science from Stanford University in 2016.  I have a passion for photography and all things outdoors.  </p>
+        <p><a href="https://storage.googleapis.com/kjtmckenzie-home-static/kmckenzie_resume.pdf">Resume</a></p>
         <p><a href="https://www.linkedin.com/in/kpmckenzie">LinkedIn</a></p>
         <p><a href="https://www.credential.net/6pe357iu?key=201db570836aa37960563c5e4d331bd3d703e71ea798062e21d831b8cf1d1c62">GCP Certification - Professional Cloud Architect</a></p>
+        <p><a href="https://www.credential.net/sgh1gpue?key=ffb9c6cf77ad9f4a0277cf2eec2facbaef5cbe88ad1a5f1c98bf89208f8f736b">GCP Certification - Professional Data Engineer</a></p>
     </div>
 </div>
 <!-- /.row -->
