Added next certification

--- a/templates/index.html
+++ b/templates/index.html
@@ -84,6 +84,7 @@
         <p><a href="https://www.linkedin.com/in/kpmckenzie">LinkedIn</a></p>
         <p><a href="https://www.credential.net/6pe357iu?key=201db570836aa37960563c5e4d331bd3d703e71ea798062e21d831b8cf1d1c62">GCP Certification - Professional Cloud Architect</a></p>
         <p><a href="https://www.credential.net/sgh1gpue?key=ffb9c6cf77ad9f4a0277cf2eec2facbaef5cbe88ad1a5f1c98bf89208f8f736b">GCP Certification - Professional Data Engineer</a></p>
+        <p><a href="https://www.credential.net/jjdvhq9n?key=b6d2541cb42b9361373498d5e48dd049fefd794fedba53f25c77dbdbbd7c51eb">GCP Certification - Professional Cloud Developer</a></p>
     </div>
 </div>
 <!-- /.row -->
