--- a/static/css/modern-business.css
+++ b/static/css/modern-business.css
@@ -102,3 +102,25 @@ footer {
     float: none;
     margin: 0 auto;
 }
+
+
+.image-container {
+    width: 100%;
+    height: 50vh;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+}​
+
+.image-container-darken:hover{
+  -webkit-filter: brightness(80%);
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  -webkit-transform: scale(0.99);
+  -moz-transform: scale(0.99);
+  -ms-transform: scale(0.99);
+  -o-transform: scale(0.99);
+}
