--- a/templates/base.html
+++ b/templates/base.html
@@ -27,8 +27,8 @@
 	    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 	    <!--[if lt IE 9]>
-	        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-	        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+		<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+		<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 	    <![endif]-->
 			
 	    <!-- jQuery -->
@@ -45,41 +45,47 @@
 	</head>
 	<body>
 		
-		
-	    <!-- Navigation -->
-	    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-	        <div class="container"  style="max-width: 1440px; margin:0 auto;">
-	            <!-- Brand and toggle get grouped for better mobile display -->
-	            <div class="navbar-header">
-	                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-	                    <span class="sr-only">Toggle navigation</span>
-	                    <span class="icon-bar"></span>
-	                    <span class="icon-bar"></span>
-	                    <span class="icon-bar"></span>
-	                </button>
-	                <a class="navbar-brand" href="/">Home</a>
-	            </div>
-	            <!-- Collect the nav links, forms, and other content for toggling -->
-	            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-	                <ul class="nav navbar-nav navbar-right">
-	                    <li>
-	                        <a href="/photography/">Photography</a>
-	                    </li>
-	                    <li>
-	                        <a href="/#projects">Projects</a>
-	                    </li>
-						<li>
-	                        <a href="/#about">About Me</a>
-	                    </li>
-	                </ul>
-	            </div>
-	            <!-- /.navbar-collapse -->
-	        </div>
-	        <!-- /.container -->
-	    </nav>
+
+		<div id="content" class="col-centered">
+			<!-- Navigation -->
+			<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+				<div class="navbar-holder col-centered">
+					<div class="col-lg-10 col-centered">
+						<!-- Brand and toggle get grouped for better mobile display -->
+						<div class="navbar-header">
+							<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+								<span class="sr-only">Toggle navigation</span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+							</button>
+							<a class="navbar-brand" href="/">Kevin McKenzie</a>
+						</div>
+						<!-- Collect the nav links, forms, and other content for toggling -->
+						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+							<ul class="nav navbar-nav navbar-right">
+								<li>
+									<a href="/">Home</a>
+								</li>
+								<li>
+									<a href="/photography/">Photography</a>
+								</li>
+								<li>
+									<a href="/#projects">Projects</a>
+								</li>
+								<li>
+									<a href="/#about">About Me</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+				<!-- /.navbar-collapse -->
+				</div>
+				<!-- /.container -->
+			</nav>
 
 
-		<div id="content" style="max-width: 2000px; margin:0 auto;">
+
 			{% with messages = get_flashed_messages() %}
 				{% if messages %}
 					{% for message in messages %}
@@ -93,7 +99,7 @@
 				{% endif %}
 			{% endwith %}
 
-            <div class="col-lg-8 col-centered">
+            <div class="col-lg-10 col-centered">
     		    {% block content %} {% endblock %}
             </div>
 		</div>
@@ -103,7 +109,7 @@
     <footer>
         <div class="row" style="max-width: 1440px; margin:0 auto;">
             <div class="col-lg-8 col-centered">
-                <p>Copyright &copy; Kevin McKenzie 2018</p>
+                <p style="text-align: center">Copyright &copy; Kevin McKenzie 2019</p>
             </div>
         </div>
     </footer>
