fixed links to resume and picture

--- a/templates/index.html
+++ b/templates/index.html
@@ -69,7 +69,7 @@
     <h2 class="page-header">About Me</h2>
 
     <div class="col-md-6">
-        <img class="img-responsive" src="/static/pictures/me.jpeg" alt="">
+        <img class="img-responsive" src="https://storage.googleapis.com/kjtmckenzie-home-static/me.jpg" alt="">
     </div>
     <div class="col-md-6">
         <p>I am a Google Cloud Customer Engineer at Google.  I received a
