--- a/templates/photography.html
+++ b/templates/photography.html
@@ -16,7 +16,7 @@
         {% for album in context.albums %}
         <div class="col-md-4 col-sm-6" style="height:320px;">
             <a href="{{album['album'].key.urlsafe()}}">
-                <img class="img-responsive img-hover" src="{{album['cover'].url}}=s1024" alt="">
+                <img class="img-responsive img-hover" src="{{album['cover_url']}}=s1024" alt="">
             </a>
             <div class="text-center small-gray">{{album['album'].title}}</div>
         </div>
