made great progress on python3 migration

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,10 +10,10 @@
     {% if context.albums is not none %}
         {% for album in context.albums %}
         <div class="col-md-4" style="height:320px; max-width: 420px; min-width: 325px">
-            <a href="photography/{{album['album'].key.urlsafe()}}">
-                <img class="img-responsive img-hover" src="{{album['cover'].url}}" alt="">
+            <a href="photography/{{album.path}}">
+                <img class="img-responsive img-hover" src="{{album.cover}}" alt="">
             </a>
-            <div class="text-center small-gray">{{album['album'].title}}</div>
+            <div class="text-center small-gray">{{album.title}}</div>
         </div>
 
         {% endfor %}
