got the site basics to work, still need to do auth and prepare for uploading to app engine

--- a/templates/album.html
+++ b/templates/album.html
@@ -18,8 +18,8 @@
 {% if context.photos is not none %}
     {% for photo in context.photos %}
         <div class="row">
-            <a href="{{photo.url}}=s0">
-                <img class="img-responsive" src="{{photo.url}}=s2048" alt="">
+            <a href="{{photo.url}}">
+                <img class="img-responsive" src="{{photo.url}}" alt="">
             </a>
         </div>
         <hr>
