--- a/templates/photography.html
+++ b/templates/photography.html
@@ -12,20 +12,20 @@
 
 <!-- Portfolio Section -->
 <div class="row">
+    <h2 class="page-header">Photography</h2>
+
     {% if context.albums is not none %}
         {% for album in context.albums %}
-        <div class="col-md-4 col-sm-6" style="height:320px;">
-            <a href="{{album['album'].key.urlsafe()}}">
-                <img class="img-responsive img-hover" src="{{album['cover'].url}}=s1024" alt="">
-            </a>
-            <div class="text-center small-gray">{{album['album'].title}}</div>
-        </div>
-
+            <div class="col-md-4" style="height:320px; max-width: 420px; min-width: 325px">
+                <a href="./{{album.path}}">
+                    <img class="img-responsive img-hover" src="{{album.cover}}" alt="">
+                </a>
+                <div class="text-center small-gray">{{album.title}}</div>
+            </div>
         {% endfor %}
     {% else %}
         No album
     {% endif %}
-
 </div>
 
 
