--- a/templates/base.html
+++ b/templates/base.html
@@ -32,10 +32,10 @@
 	    <![endif]-->
 			
 	    <!-- jQuery -->
-	    <script src="/js/jquery.js"></script>
+	    <script src="/static/js/jquery.js"></script>
 
 	    <!-- Bootstrap Core JavaScript -->
-	    <script src="/js/bootstrap.min.js"></script>
+	    <script src="/static/js/bootstrap.min.js"></script>
 
 		
 		{% block meta %} {% endblock %}
