--- a/static/css/modern-business.css
+++ b/static/css/modern-business.css
@@ -59,25 +59,6 @@ header.carousel .fill {
     font-size: 100px;
 }
 
-/* Pricing Page Styles */
-
-.price {
-    display: block;
-    font-size: 50px;
-    line-height: 50px;
-}
-
-.price sup {
-    top: -20px;
-    left: 2px;
-    font-size: 20px;
-}
-
-.period {
-    display: block;
-    font-style: italic;
-}
-
 /* Footer Styles */
 
 footer {
@@ -87,11 +68,19 @@ footer {
 /* Responsive Styles */
 
 @media(max-width:991px) {
-    .customer-img,
-    .img-related {
-        margin-bottom: 30px;
-    }
+    .image-container {
+        max-width: 640px; 
+        min-width: 300px;
+        padding-bottom: 40px;
+        float: left;
+        position: relative;
+        min-height: 1px;
+        padding-right: 15px;
+        padding-left: 15px;
+        width: 50.00%;
+    }​
 }
+
 
 @media(max-width:767px) {
     .img-portfolio {
@@ -101,33 +90,65 @@ footer {
     header.carousel .carousel {
         height: 70%;
     }
+    .image-container {
+        max-width: 640px;
+        padding-bottom: 40px;
+        float: left;
+        position: relative;
+        min-height: 1px;
+        padding-right: 15px;
+        padding-left: 15px;
+        width: 100%;
+    }​
+
+    .flexible-header {
+        float: none;
+        margin: 0 auto;
+    }
+
+}
+
+
+@media (min-width: 768px) {
+  .image-container {
+    max-width: 450px; 
+    min-width: 300px;
+    padding-bottom: 40px;
+    float: left;
+    position: relative;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+    width: 50.00%;
+  }​
+
+  .flexible-header {
+      text-align: left;
+  }
+}
+
+
+@media (min-width: 992px) {
+  .image-container {
+    max-width: 450px; 
+    min-width: 250px;
+    padding-bottom: 40px;
+    float: left;
+    position: relative;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+    width: 33.33333333%;
+  }​
+
+  .flexible-header {
+      text-align: left;
+  }
 }
 
 .col-centered{
     float: none;
     margin: 0 auto;
-}
-
-
-.image-container {
-    width: 100%;
-    height: 50vh;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
-}​
-
-.image-container-darken:hover{
-  -webkit-filter: brightness(80%);
-  -webkit-transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-  -ms-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-  -webkit-transform: scale(0.99);
-  -moz-transform: scale(0.99);
-  -ms-transform: scale(0.99);
-  -o-transform: scale(0.99);
 }
 
 #content {
@@ -141,3 +162,4 @@ footer {
 .navbar-brand {
     padding-left: 0px;
 }
+
