added reference to this website as one of my coding examples

--- a/templates/index.html
+++ b/templates/index.html
@@ -54,11 +54,11 @@
     <div class="col-md-4">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h4>Fault Injector</h4>
+                <h4>Homepage</h4>
             </div>
             <div class="panel-body" style="height:145px;">
-                <p>Inject standard OS faults into Linux programs to test error handling routines.</p>
-                <a href="https://github.com/kjtmckenzie/cs240-lab3" class="btn btn-default">Learn More</a>
+                <p>This website was built as an experiment on GCP.  It runs on App Engine (python3), Kubernetes, or Cloud Run.  The database is Cloud Firestore.</p>
+                <a href="https://github.com/kjtmckenzie/kjtmckenzie-home" class="btn btn-default">Learn More</a>
             </div>
         </div>
     </div>
