added professional security engineer certification

--- a/templates/index.html
+++ b/templates/index.html
@@ -85,6 +85,7 @@
         <p><a href="https://www.credential.net/sgh1gpue">GCP Certification - Professional Data Engineer</a></p>
         <p><a href="https://www.credential.net/jjdvhq9n">GCP Certification - Professional Cloud Developer</a></p>
         <p><a href="https://www.credential.net/1w9zz76w">GCP Certification - Professional Network Engineer</a></p>
+        <p><a href="https://www.credential.net/lv9o865x">GCP Certification - Professional Security Engineer</a></p>
     </div>
 </div>
 <!-- /.row -->
