updated blurb about myself

--- a/templates/index.html
+++ b/templates/index.html
@@ -78,8 +78,7 @@
     </div>
     <div class="col-md-6">
         <p>I am a Google Cloud Customer Engineer at Google.  I received a
-            Masters in Computer Science from Stanford University in 2016.  I have a passion for photography and all things outdoors.  </p>
-        <p><a href="https://storage.googleapis.com/kjtmckenzie-home-static/kmckenzie_resume.pdf">Resume</a></p>
+            Masters in Computer Science from Stanford University.  I have a passion for photography and all things outdoors.</p>
         <p><a href="https://www.linkedin.com/in/kpmckenzie">LinkedIn</a></p>
         <p><a href="https://www.credential.net/6pe357iu">GCP Certification - Professional Cloud Architect</a></p>
         <p><a href="https://www.credential.net/sgh1gpue">GCP Certification - Professional Data Engineer</a></p>
