updated the base template with new title and year

--- a/templates/index.html
+++ b/templates/index.html
@@ -77,7 +77,7 @@
         <img class="img-responsive" src="https://storage.googleapis.com/kjtmckenzie-home-static/me.jpg" alt="">
     </div>
     <div class="col-md-6">
-        <p>I am a Google Cloud Customer Engineer at Google.  I received a
+        <p>I am a Google Cloud Customer Engineering Manager at Google in Los Angeles.  I received a
             Masters in Computer Science from Stanford University.  I have a passion for photography and all things outdoors.</p>
         <p><a href="https://www.linkedin.com/in/kpmckenzie">LinkedIn</a></p>
         <p><a href="https://www.credential.net/6pe357iu">GCP Certification - Professional Cloud Architect</a></p>
